Fix button flickering

--- a/src/components/common/ProductBox/ProductBox.module.scss
+++ b/src/components/common/ProductBox/ProductBox.module.scss
@@ -4,7 +4,7 @@
   background-color: $product-box-bg;
   border: 1px solid $product-box-border-light;
   margin-bottom: 2rem;
-
+  
   .photo {
     position: relative;
     padding: 10px;
@@ -41,12 +41,17 @@
       bottom: 0;
       left: 0;
       right: 0;
-      display: flex;
       justify-content: space-between;
       padding: 0 10px;
+      display: none;
     }
   }
-
+   &:hover .buttons {
+    display: flex;
+  }
+    &:hover .priceBtn  {
+    background-color: $product-box-primary;
+  }
   .content {
     text-align: center;
     padding: 20px;
